force-app/main/default/objects/Web_Eng_Sync_Enquiry_Field__mdt/Web_Eng_Sync_Enquiry_Field__mdt.object-meta.xml
<CustomObject>
    <label>Web Eng Sync Enquiry Field</label>
    <pluralLabel>Web Eng Sync Enquiry Fields</pluralLabel>
</CustomObject>