force-app/main/default/objects/Web_Eng_Sync_Enquiry_Field__mdt/fields/Data_For__c.field-meta.xml
<CustomField>
    <fullName>Data_For__c</fullName>
    <label>Data For</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>