force-app/main/default/objects/Web_Eng_Sync_Enquiry_Field__mdt/fields/needTransformation__c.field-meta.xml
<CustomField>
    <fullName>needTransformation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>needTransformation</label>
    <type>Checkbox</type>
</CustomField>