force-app/main/default/objects/Web_Eng_Sync_Enquiry_Field__mdt/fields/SF_Object__c.field-meta.xml
<CustomField>
    <fullName>SF_Object__c</fullName>
    <label>SF Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enquiry</fullName>
                <default>true</default>
                <label>Enquiry</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>